Bug 293294 - GlobalPresenceChooser tooltip does not show 'Connecting' state
Summary: GlobalPresenceChooser tooltip does not show 'Connecting' state
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: git-latest
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2012-02-04 14:12 UTC by Martin Klapetek
Modified: 2012-07-06 12:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Klapetek 2012-02-04 14:12:10 UTC
When the accounts are connecting, it shows just 'Offline'.
Comment 1 Martin Klapetek 2012-03-07 10:11:32 UTC
Git commit dd3cd185252d263ef46324071cc293c30ec8f940 by Martin Klapetek.
Committed on 07/03/2012 at 10:44.
Pushed by mklapetek into branch 'master'.

Show 'Connecting...' in the global presence tooltip

Reviewed-by: Dominik Cermak
REVIEW: 104169

M  +53   -57   global-presence-chooser.cpp

http://commits.kde.org/telepathy-contact-list/dd3cd185252d263ef46324071cc293c30ec8f940