Show 'Connecting...' in the global presence tooltip

Reviewed-by: Dominik Cermak
REVIEW: 104169
BUG: 293294